--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -2,5 +2,12 @@
     "portfolio_line_one": "¡Hola! Soy Julián Piedra.",
     "portfolio_line_two": "Soy graduado con diplomado en la carrera Tecnologías de la Información,",
     "portfolio_line_three": "y estoy buscando comenzar mi carrera en la industria tecnológica.",
-    "portfolio_line_four": "Soy apasionado de la tecnología y siempre busco aprender cosas nuevas."
+    "portfolio_line_four": "Soy apasionado de la tecnología y siempre busco aprender cosas nuevas.",
+    "contact_me_title": "¡Contactame!",
+    "contact_me_paragraph": "Si tienes alguna pregunta o te gustaría ponerte en contacto, ¡Por favor hazlo!",
+    "name": "Nombre",
+    "email": "Correo Electrónico",
+    "message": "Mensaje",
+    "send": "Enviar"
+    
 }
