--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,14 +1,22 @@
 {
-    "portfolio_line_one": "Hello there! I'm Julian Piedra.",
+    "portfolio_line_one": "Hello there! ",
+    "name_intro": "My name is ",
+    "name_portfolio": "Julian Piedra",
+    "introduction": "And I'm a Software Developer.",
+    "get_to_know_me": "Want to get to know me better?",
     "portfolio_line_two": "I am a graduate with an Associate's degree in Information Technology,",
     "portfolio_line_three": "and looking to kickstart my career in the tech industry.",
     "portfolio_line_four": "I'm passionate about technology and always looking to learn new things.",
     "contact_me_title": "Contact Me!",
+    "email_sent": "Email sent successfully! Im looking forward to reading it. I'll get back to you as soon as possible.",
+    "email_not_sent": "An error has occurred and the Email was not sent. Please try again later.",
     "contact_me_paragraph": "If you have any questions or would like to get in touch! Please do. ",
     "name": "Name",
     "email": "Email",
     "message": "Message",
     "send": "Send",
+    "email_example": "myemail@test.com",
+    "message_example": "Type anything you want to say to me here.",
     "validations": {
         "error_name_required": "Name is required",
         "error_name_max_length": "Name must be less than 70 characters",
