Navigation bar, about me section

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -7,7 +7,9 @@
     "portfolio_line_two": "I am a graduate with an Associate's degree in Information Technology,",
     "portfolio_line_three": "and looking to kickstart my career in the tech industry.",
     "portfolio_line_four": "I'm passionate about technology and always looking to learn new things.",
-    "contact_me_title": "Contact Me!",
+    "contact_me_title": "Contact Me",
+    "about_me_title": "About Me",
+    "education_title": "Education",
     "email_sent": "Email sent successfully! Im looking forward to reading it. I'll get back to you as soon as possible.",
     "email_not_sent": "An error has occurred and the Email was not sent. Please try again later.",
     "contact_me_paragraph": "If you have any questions or would like to get in touch! Please do. ",
