--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -9,7 +9,9 @@
     "portfolio_line_two": "Soy graduado con diplomado en la carrera Tecnologías de la Información,",
     "portfolio_line_three": "y estoy buscando comenzar mi carrera en la industria tecnológica.",
     "portfolio_line_four": "Soy apasionado de la tecnología y siempre busco aprender cosas nuevas.",
-    "contact_me_title": "¡Contactame!",
+    "contact_me_title": "Contactame",
+    "about_me_title": "Sobre Mí",
+    "education_title": "Educación",
     "contact_me_paragraph": "Si tienes alguna pregunta o te gustaría ponerte en contacto, ¡Por favor hazlo!",
     "name": "Nombre",
     "email": "Correo Electrónico",
