Header, aesthetic changes in main page/contact me and about me module finished(social media, information)

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,12 +1,17 @@
 {
+    "language": "en",
+    "about_me": "Let me tell you about a little me",
+    "about_me_explore": "Or... you can start by taking a look by yourself",
     "portfolio_line_one": "Hello there! ",
     "name_intro": "My name is ",
     "name_portfolio": "Julian Piedra",
     "introduction": "And I'm a Software Developer.",
     "get_to_know_me": "Want to get to know me better?",
-    "portfolio_line_two": "I am a graduate with an Associate's degree in Information Technology,",
-    "portfolio_line_three": "and looking to kickstart my career in the tech industry.",
-    "portfolio_line_four": "I'm passionate about technology and always looking to learn new things.",
+    "about_me_line_one": "I am a graduate with an Associate's degree in I.T based in Costa Rica with a strong foundation in software development. Ready to excel in the fast-paced world of technology.",
+    "about_me_line_two": "I enjoy creating efficient, impactful solutions and turning ideas into reality through code.",
+    "about_me_line_three": "Constantly exploring new technologies and staying updated with the latest industry trends.",
+    "about_me_line_four": "Skilled at analyzing problems, recognizing patterns, and crafting optimized solutions.",
+    "about_me_line_five": "Always seeking opportunities to grow by mastering new tools and technologies.",
     "contact_me_title": "Contact Me",
     "about_me_title": "About Me",
     "education_title": "Education",
