--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -1,14 +1,18 @@
 {
+    "language": "es",
     "portfolio_line_one": "¡Hola! ",
     "name_intro": "Mi nombre es ",
     "name_portfolio": "Julián Piedra",
     "introduction": "Y soy un Desarrollador de Software.",
     "get_to_know_me": "¿Quieres conocerme mejor?",
+    "about_me_explore": "O... puedes empezar por echar un vistazo por ti mismo",
     "email_not_sent": "Ha ocurrido un error y el correo electrónico no se ha enviado. Por favor, inténtelo de nuevo más tarde.",
     "email_sent": "¡Correo electrónico enviado con éxito! Estoy deseando leerlo. Me pondré en contacto contigo lo antes posible.",
-    "portfolio_line_two": "Soy graduado con diplomado en la carrera Tecnologías de la Información,",
-    "portfolio_line_three": "y estoy buscando comenzar mi carrera en la industria tecnológica.",
-    "portfolio_line_four": "Soy apasionado de la tecnología y siempre busco aprender cosas nuevas.",
+    "about_me_line_one": "Soy graduado con un diplomado en I.T basado en Costa Rica con una sólida base en desarrollo de software. Listo para destacar en el acelerado mundo de la tecnología.",
+    "about_me_line_two": "Disfruto creando soluciones eficientes e impactantes y convirtiendo ideas en realidad a través del código.",
+    "about_me_line_three": "Explorando constantemente nuevas tecnologías y manteniéndome actualizado con las últimas tendencias de la industria.",
+    "about_me_line_four": "Experto en analizar problemas, reconocer patrones y crear soluciones optimizadas.",
+    "about_me_line_five": "Siempre buscando oportunidades para crecer dominando nuevas herramientas y tecnologías.",
     "contact_me_title": "Contactame",
     "about_me_title": "Sobre Mí",
     "education_title": "Educación",
