General changes for responsive design, add of hamburger menu for mobile, education module

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,6 +1,6 @@
 {
     "language": "en",
-    "about_me": "Let me tell you about a little me",
+    "about_me": "Let me tell you a little about me",
     "about_me_explore": "Or... you can start by taking a look by yourself",
     "portfolio_line_one": "Hello there! ",
     "name_intro": "My name is ",
@@ -15,6 +15,13 @@
     "contact_me_title": "Contact Me",
     "about_me_title": "About Me",
     "education_title": "Education",
+    "education_background": "My educational background",
+    "high_school": "High School",
+    "high_school_description": "Graduated with a strong academic record, developing critical thinking skills and a solid foundation for higher education in technology.",
+    "conversational_english": "Advanced english certificate",
+    "conversation_english_description": "Earned a total of 6 beginner through advanced English certifications, demonstrating strong communication skills and fluency for professional and academic contexts.",
+    "higher_education": "Higher Education",
+    "higher_education_description": "Pursued an Asociate's degree in Information Technology, gaining skills in coding, database management, project management, and innovative problem-solving techniques.",
     "email_sent": "Email sent successfully! Im looking forward to reading it. I'll get back to you as soon as possible.",
     "email_not_sent": "An error has occurred and the Email was not sent. Please try again later.",
     "contact_me_paragraph": "If you have any questions or would like to get in touch! Please do. ",
