--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -1,6 +1,7 @@
 {
     "language": "es",
     "portfolio_line_one": "¡Hola! ",
+    "about_me": "Déjame contarte un poco sobre mí",
     "name_intro": "Mi nombre es ",
     "name_portfolio": "Julián Piedra",
     "introduction": "Y soy un Desarrollador de Software.",
@@ -16,6 +17,13 @@
     "contact_me_title": "Contactame",
     "about_me_title": "Sobre Mí",
     "education_title": "Educación",
+    "education_background": "Mi formación académica",
+    "high_school": "Escuela Secundaria",
+    "high_school_description": "Graduado con un sólido expediente académico, desarrollando habilidades de pensamiento crítico y una sólida base para la educación superior en tecnología.",
+    "conversational_english": "Certificado de inglés avanzado",
+    "conversation_english_description": "Obtuve un total de 6 certificaciones de inglés de principiante a avanzado, demostrando fuertes habilidades de comunicación y fluidez para contextos profesionales y académicos.",
+    "higher_education": "Educación Superior",
+    "higher_education_description": "Cursé un diplomado en Tecnología de la Información, adquiriendo habilidades en codificación, gestión de bases de datos, gestión de proyectos y técnicas innovadoras de resolución de problemas.",
     "contact_me_paragraph": "Si tienes alguna pregunta o te gustaría ponerte en contacto, ¡Por favor hazlo!",
     "name": "Nombre",
     "email": "Correo Electrónico",
