Added a spinner and error messages on submit to the contact me form indication, general css and certification module and page footer

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -15,6 +15,10 @@
     "contact_me_title": "Contact Me",
     "about_me_title": "About Me",
     "education_title": "Education",
+    "certification_title": "Certifications",
+    "issued_by": "Issued by: ",
+    "scrum_cert": "Gained foundational knowledge of Scrum principles and practices to excel in Agile projects.",
+    "remote_cert": "Learned how to work effectively in a remote environment, mastering communication and collaboration skills.",
     "education_background": "My educational background",
     "high_school": "High School",
     "high_school_description": "Graduated with a strong academic record, developing critical thinking skills and a solid foundation for higher education in technology.",
