--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -17,6 +17,10 @@
     "contact_me_title": "Contactame",
     "about_me_title": "Sobre Mí",
     "education_title": "Educación",
+    "certification_title": "Certificaciones",
+    "issued_by": "Emitido por: ",
+    "scrum_cert": "Obtuve conocimientos fundamentales de los principios y prácticas de Scrum para destacar en proyectos ágiles.",
+    "remote_cert": "Aprendí a trabajar de manera efectiva en un entorno remoto, dominando habilidades de comunicación y colaboración.",
     "education_background": "Mi formación académica",
     "high_school": "Escuela Secundaria",
     "high_school_description": "Graduado con un sólido expediente académico, desarrollando habilidades de pensamiento crítico y una sólida base para la educación superior en tecnología.",
